# Stancer-dsp2-client

./: .coverage  .env  .pre-commit-config.yaml  README.md  dockerfile  pyproject.toml
dsp2_client/: api_client.py  config.py  logger.py  models.py
dsp2_client/api/: api_client.py  authenticator.py  base_client.py
dsp2_client/models/: account.py  balance.py  identity.py  transaction.py  type_aliases.py
tests/: conftest.py  test_auth.py  test_base_client_api.py  test_client_api_methods.py  test_models.py
tests/test_models/: test_account.py  test_balance.py  test_identity.py  test_transaction.py
